--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -11,5 +11,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   end
 
   config.vm.hostname = "mine-blockly"
+  config.vm.synced_folder "blockly", "/home/vagrant/blockly"
+  config.vm.network "forwarded_port", guest: 3000, host: 3000, auto_correct: true
   config.vm.provision :shell, privileged: false, :path => "vagrant_scripts/vagrant.sh"
 end
