--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -12,6 +12,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.hostname = "mine-blockly"
   config.vm.synced_folder "blockly", "/home/vagrant/blockly"
+  config.vm.synced_folder "minetest", "/home/vagrant/.minetest"
+  config.vm.network "public_network", bridge: "en0: Wi-Fi (AirPort)"
   config.vm.network "forwarded_port", guest: 3000, host: 3000, auto_correct: true
   config.vm.provision :shell, privileged: false, :path => "vagrant_scripts/vagrant.sh"
 end
