--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ minetest/*
 minetest/worlds/*
 !minetest/worlds/world
 minetest/worlds/world/*
-!minetest/worlds/world/world.mt
+!minetest/worlds/world/world.mt.example
 !minetest/minetest.conf
