--- a/minetest/worlds/world/world.mt.example
+++ b/minetest/worlds/world/world.mt.example
@@ -6,4 +6,5 @@ player_backend = files
 load_mod_commands = true
 load_mod_always_noon = true
 load_mod_whereami = true
+load_mod_blockly = true
 load_mod_text_blocks = true
