Fix puma starting error

--- a/blockly/.gitignore
+++ b/blockly/.gitignore
@@ -17,6 +17,13 @@
 !/log/.keep
 !/tmp/.keep
 
+!/tmp/pids
+/tmp/pids/*
+!/tmp/pids/.keep
+!/tmp/sockets
+/tmp/sockets/*
+!/tmp/sockets/.keep
+
 /node_modules
 /yarn-error.log
 
