--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ minetest/worlds/*
 minetest/worlds/world/*
 !minetest/worlds/world/world.mt.example
 !minetest/minetest.conf
+vagrant_scripts/blockly/blockly.service
 vagrant_scripts/minetest/minetest-server.service
 vagrant_scripts/nginx/nginx.conf
