--- a/vagrant_scripts/minetest/minetest-server.service.template
+++ b/vagrant_scripts/minetest/minetest-server.service.template
@@ -6,7 +6,7 @@ After = network.target
 Type = simple
 User = MINETEST_USER
 Restart = always
-ExecStart = /usr/bin/minetestserver --port 30000 --world MINETEST_PATH/worlds/world --config MINETEST_PATH/minetest.conf --logfile MINETEST_PATH/debug.txt
+ExecStart = /usr/bin/minetestserver --quiet
 
 [Install]
 WantedBy = multi-user.target
