--- a/vagrant_scripts/blockly/blockly.service.template
+++ b/vagrant_scripts/blockly/blockly.service.template
@@ -5,7 +5,8 @@ After = network.target
 [Service]
 Type = simple
 User = BLOCKLY_USER
-Restart = always
+Restart = on-failure
+RestartSec = 10s
 ExecStart = RUN_SCRIPT
 
 [Install]
