--- a/vagrant_scripts/minetest/minetest-server.service.template
+++ b/vagrant_scripts/minetest/minetest-server.service.template
@@ -5,7 +5,8 @@ After = network.target
 [Service]
 Type = simple
 User = MINETEST_USER
-Restart = always
+Restart = on-failure
+RestartSec = 10s
 ExecStart = /usr/bin/minetestserver --quiet
 
 [Install]
