Change settings of minetest

--- a/minetest/minetest.conf
+++ b/minetest/minetest.conf
@@ -1,1 +1,42 @@
+creative_mode = true
+enable_damage = false
+mainmenu_last_selected_world = 6
+menu_last_game = minetest
+
 secure.enable_security = false
+
+address = singleroom
+maintab_LAST = online
+name = namae
+remote_port = 30000
+
+screenH = 669
+screenW = 695
+
+secure.enable_security = false
+mono_font_size = 16
+font_size = 15
+fallback_font_size = 20
+enable_tnt = false
+tnt_radius = 1
+doubletap_jump = false
+max_users = 40
+enable_pvp = false
+enable_rollback_recording = false
+server_map_save_interval = 1
+sqlite_synchronous = 1
+debug_log_level = error
+viewing_range = 80
+enable_fog = true
+
+enable_build_where_you_stand = true
+fast_move = true
+noclip = true
+enable_fire = false
+main_menu_technical_settings = true
+nodetimer_interval = 0.2
+curl_timeout = 7500
+server_announce = false
+world_config_selected_mod = 1
+enable_server = false
+free_move = false
