Change world settings example

--- a/minetest/worlds/world.mt.example
+++ b/minetest/worlds/world.mt.example
@@ -1,9 +1,11 @@
 gameid = minetest
 backend = sqlite3
-creative_mode = false
-enable_damage = true
+creative_mode = true
+enable_damage = false
 load_mod_always_noon = true
 load_mod_blockly = true
+load_mod_dig_blocker = true
+load_mod_orienteering = true
 load_mod_text_blocks = true
 load_mod_whereami = true
 player_backend = files
