Add mesecons mod

--- a/minetest/worlds/world.mt.example
+++ b/minetest/worlds/world.mt.example
@@ -4,6 +4,38 @@ creative_mode = false
 enable_damage = true
 load_mod_always_noon = true
 load_mod_blockly = true
+load_mod_mesecons = true
+load_mod_mesecons_alias = true
+load_mod_mesecons_blinkyplant = true
+load_mod_mesecons_button = true
+load_mod_mesecons_commandblock = true
+load_mod_mesecons_delayer = true
+load_mod_mesecons_detector = true
+load_mod_mesecons_doors = true
+load_mod_mesecons_extrawires = true
+load_mod_mesecons_fpga = true
+load_mod_mesecons_gates = true
+load_mod_mesecons_hydroturbine = true
+load_mod_mesecons_insulated = true
+load_mod_mesecons_lamp = true
+load_mod_mesecons_lightstone = true
+load_mod_mesecons_luacontroller = true
+load_mod_mesecons_materials = true
+load_mod_mesecons_microcontroller = true
+load_mod_mesecons_movestones = true
+load_mod_mesecons_mvps = true
+load_mod_mesecons_noteblock = true
+load_mod_mesecons_pistons = true
+load_mod_mesecons_powerplant = true
+load_mod_mesecons_pressureplates = true
+load_mod_mesecons_random = true
+load_mod_mesecons_receiver = true
+load_mod_mesecons_solarpanel = true
+load_mod_mesecons_stickyblocks = true
+load_mod_mesecons_switch = true
+load_mod_mesecons_torch = true
+load_mod_mesecons_walllever = true
+load_mod_mesecons_wires = true
 load_mod_text_blocks = true
 load_mod_whereami = true
 player_backend = files
