--- a/blockly/Gemfile
+++ b/blockly/Gemfile
@@ -64,3 +64,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'jquery-rails'
 gem 'config'
 gem 'therubyracer'
+gem 'bootstrap', '~> 4.0.0'
