--- a/blockly/Gemfile
+++ b/blockly/Gemfile
@@ -75,5 +75,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem 'jquery-rails'
 gem 'config'
-gem 'therubyracer'
+gem 'mini_racer'
 gem 'bootstrap', '~> 4.0.0'
