--- a/blockly/Gemfile
+++ b/blockly/Gemfile
@@ -76,4 +76,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'jquery-rails'
 gem 'config'
 gem 'mini_racer'
-gem 'bootstrap', '~> 4.0.0'
+gem "bootstrap", ">= 4.3.1"
