--- a/blockly/Gemfile
+++ b/blockly/Gemfile
@@ -59,6 +59,7 @@ group :development do
   gem 'spring-watcher-listen', '~> 2.0.0'
 
   gem 'annotate'
+  gem 'rails-flog', :require => 'flog'
 end
 
 group :test do
