--- a/blockly/.gitignore
+++ b/blockly/.gitignore
@@ -36,3 +36,10 @@ config/environments/*.local.yml
 public/assets
 
 coverage
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
