--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ docker/minetest/home/worlds/world/*
 !docker/minetest/home/worlds/world/world.mt
 docker/android/apk/*
 !docker/android/apk/.keep
+.vagrant
+Vagrantfile
