--- a/docker-compose.reviewer.yml
+++ b/docker-compose.reviewer.yml
@@ -1,34 +1,19 @@
 version: '3.7'
 services:
   blockly:
-    build:
-      context: .
-      dockerfile: ./docker/blockly/Dockerfile
-    container_name: mine_blockly_app
-    entrypoint: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    image: batako/blockly:0.4.0-alpine3.11
+    container_name: blockly_0.4.0-alpine3.11
     ports:
       - 3000:3000
     volumes:
-      - ./blockly:/blockly
       - app_blockly_mod_home:/blockly/minetest
-      - app_blockly_tmp:/blockly/tmp
-      # exclude volumes
-      - /blockly/node_modules
-  nginx:
-    build:
-      context: ./docker/nginx
-    container_name: mine_blockly_nginx
-    volumes:
-      - ./blockly/public:/app/public
-      - app_blockly_tmp:/app/tmp
-    ports:
-      - 80:8080
-    depends_on:
-      - blockly
+    environment:
+    - PORT=3000
   minetest:
-    build:
-      context: ./docker/minetest
-    container_name: mine_blockly_minetest
+    # image: batako/minetest:0.4.17.1-alpine3.11
+    # container_name: minetest_0.4.17.1-alpine3.11
+    image: batako/minetest:5.1.1-alpine3.11
+    container_name: minetest_5.1.1-alpine3.11
     volumes:
       - ./docker/minetest/home/mods:/minetest/mods
       - ./docker/minetest/home/worlds:/minetest/worlds
